contact center UI changes

--- a/src/app/create-task/actions/contact-center/contact-center.component.html
+++ b/src/app/create-task/actions/contact-center/contact-center.component.html
@@ -5,7 +5,7 @@
     <p-card>
       <span class="task-sum-label">Task Summary</span>
       <div class="summary-pad">
-        <div class="row col-md-12">
+        <div class="row col-md-12 bottom-border">
           <div class=" col-md-4">
             <label>Task ID</label>
             <span class="label-pad">121110</span>
@@ -19,7 +19,7 @@
             <span class="label-pad">+1(844)2356310</span>
           </div>
         </div>
-        <div class="row col-md-12">
+        <div class="row col-md-12 bottom-border pad-t-5">
           <div class=" col-md-4">
             <label>Created</label>
             <span class="label-pad">17/07/20</span>
@@ -33,7 +33,7 @@
             <span class="label-pad">Add user group</span>
           </div>
         </div>
-        <div class="row col-md-12">
+        <div class="row col-md-12 pad-t-5">
           <div class=" col-md-4">
             <label>Assigned Email</label>
             <span class="label-pad">test-assign@wellsfargo.com</span>
@@ -50,7 +50,7 @@
     <p-card>
       <span class="task-sum-label">Account Details</span>
       <div class="summary-pad">
-        <div class="row col-md-12">
+        <div class="row col-md-12 bottom-border">
           <div class=" col-md-4">
             <label>Account Number</label>
             <span class="label-pad">7611245</span>
@@ -64,7 +64,7 @@
             <span class="label-pad">3441890</span>
           </div>
         </div>
-        <div class="row col-md-12">
+        <div class="row col-md-12 pad-t-5">
           <div class=" col-md-4">
             <label>Market Value</label>
             <span class="label-pad">$200000</span>
