--- a/src/app/create-task/actions/contact-center/contact-center.component.scss
+++ b/src/app/create-task/actions/contact-center/contact-center.component.scss
@@ -2,6 +2,7 @@
     display: inline-block;
     font-size: 23px;
     padding-left: 15px;
+    font-weight: bold;
 }
 .info-icon{
     display: inline-block;
@@ -15,11 +16,13 @@
 }
 .label-pad {
     padding: 10px;
+    font-weight: bold;
 }
 .task-sum-label {
     display: inline-block;
     font-size: 18px;
     font-family: initial;
+    font-weight: 700;
 }
 .summary-pad {
     padding: 20px;
@@ -37,4 +40,10 @@
 .acc-details-mar{
     margin: 14px;
     margin-right: 10px;
+}
+.bottom-border{
+    border-bottom: 1px solid lightgray;
+}
+.pad-t-5{
+    padding-top: 5px !important;
 }
