--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "assets/scss/common.scss";
 @import "assets/scss/panel.scss";
 @import "assets/scss/variables.scss";
-@import "assets/scss/pie-chart.scss"
+@import "assets/scss/pie-chart.scss";
+@import "assets/scss/button.scss";
 
 
