--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
@@ -2,57 +2,99 @@
   <div>
     <div class="row col-md-12 task-details-b-pad">
       <div class="col-md-4">
-        <label class="task-detail-label">Caller Name</label>
+        <label class="task-detail-label">Caller Name<span class="required-indicator">*</span></label>
         <input formControlName="callerName" type="text" pInputText />
       </div>
       <div class=" col-md-4">
-        <label class="task-detail-label">Caller Phone</label>
-        <input formControlName="callerPhone" type="text" pInputText />
+        <label class="task-detail-label">Caller Phone<span class="required-indicator">*</span></label>
+        <input formControlName="callerPhone" type="number" pInputText />
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class=" col-md-4">
-        <label class="task-detail-label">Action</label>
-        <input formControlName="action" type="text" pInputText />
+        <label class="task-detail-label">Call Code<span class="required-indicator">*</span></label>
+        <p-dropdown formControlName="callCode" [options]="callCodes" (onChange)="loadActionByCallCode(callCode.value)">
+        </p-dropdown>
+
       </div>
       <div class=" col-md-4">
-        <label class="task-detail-label">Call Code</label>
-        <input formControlName="callCode" type="text" pInputText />
+        <label class="task-detail-label">Action<span class="required-indicator">*</span></label>
+        <p-dropdown formControlName="action" [options]="actions"></p-dropdown>
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class=" col-md-4">
-        <label class="task-detail-label">Fully Authenticated</label>
-        <p-radioButton name="fullAuth1" value="yes" formControlName="fullyAuthenticated" label="Yes" inputId="opt1">
+        <label class="task-detail-label">Fully Authenticated<span class="required-indicator">*</span></label>
+        <p-radioButton name="fullAuth" value="yes" formControlName="fullyAuthenticated" label="Yes" inputId="opt1">
         </p-radioButton>
-        <p-radioButton name="fullAuth2" value="no" formControlName="fullyAuthenticated" label="No" inputId="opt2">
+        <p-radioButton name="fullAuth" value="no" formControlName="fullyAuthenticated" label="No" inputId="opt2">
         </p-radioButton>
       </div>
+
+    </div>
+    <div class="row col-md-12 task-details-b-pad">
       <div class="col-md-4">
-        <label class="task-detail-label">Taxpayer ID</label>
-        <p-radioButton name="taxID1" value="yes" formControlName="taxPayerID" label="Yes" inputId="tax1">
+        <label class="task-detail-label">Taxpayer ID<span class="required-indicator">*</span></label>
+        <p-radioButton name="taxID" value="yes" formControlName="taxPayerID" label="Yes" inputId="tax1">
         </p-radioButton>
-        <p-radioButton name="taxID2" value="no" formControlName="taxPayerID" label="No" inputId="tax2"></p-radioButton>
+        <p-radioButton name="taxID" value="no" formControlName="taxPayerID" label="No" inputId="tax2"></p-radioButton>
+      </div>
+      <div class="col-md-4" *ngIf="taxPayerID.value === 'yes'">
+        <label class="task-detail-label">Taxpayer ID</label>
+        <input type="text" formControlName="taxPayerIDValue" pInputText />
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class=" col-md-4">
         <label class="task-detail-label">Task Priority</label>
-        <p-dropdown formControlName="taskPriority" [options]="taskPriority"></p-dropdown>
+        <p-dropdown formControlName="taskPriority" [options]="taskPriorityData"></p-dropdown>
+      </div>
+    </div>
+    <div class="row col-md-12 task-details-b-pad">
+      <div class=" col-md-12">
+        <label class="task-detail-label">Task Notes</label>
+        <textarea [rows]="5" [cols]="30" pInputTextarea formControlName="taskNotes"></textarea>
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class=" col-md-1">
-        <label class="task-detail-label">Call Details</label>
+        <label class="task-detail-label">Call Details<span class="required-indicator">*</span></label>
       </div>
       <div class="editor-pad col-md-7">
         <p-editor formControlName="callDetails" [style]="{'height':'200px'}"></p-editor>
       </div>
     </div>
+    <div class="row col-md-12 task-details-b-pad">
+      <div class="add-accounts-section task-details-b-pad">
+        <span>Add Additional Accounts</span>
+        <p-button type="button" label="Add" class="save-pad"></p-button>
+      </div>
+      <p-table [columns]="accountColumns" [value]="accounts">
+        <ng-template pTemplate="header" let-columns>
+          <tr>
+            <th *ngFor="let col of columns">
+              {{col.header}}
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData let-columns="columns">
+          <tr>
+            <td *ngFor="let col of columns">
+              {{rowData[col.field]}}
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+
+    <div [ngClass]="message.cssClass" *ngIf="isFormSubmitted">
+      {{message.text}}
+    </div>
+
     <div class="button-style">
       <p-button type="submit" label="Save" class="save-pad">
       </p-button>
-      <p-button type="button" label="Cancel" (click)="CancelClick()">
+      <p-button type="button" label="Cancel" (click)="cancelClick()">
       </p-button>
     </div>
   </div>
