--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -12,6 +12,7 @@ $panel-2-col:#2b7b32;
 $panel-3-col:#61221d;
 $blue-col:#007bff;
 $gray-1:lightgray;
+$orange-col: #ff9100;
 
 //font-weight
 $font-normal:normal;
