--- a/src/app/create-task/actions/contact-center/contact-center.component.html
+++ b/src/app/create-task/actions/contact-center/contact-center.component.html
@@ -84,7 +84,7 @@
            <tmt-task-detail [taskDetailData]="contactCenterData?.taskDetail"></tmt-task-detail>
         </p-tabPanel>
         <p-tabPanel header="Document">
-            <tmt-document [DocumentDetailData]="contactCenterData?.documentDetails"></tmt-document>
+            <tmt-document></tmt-document>
         </p-tabPanel>
     </p-tabView>
     </p-card>
