--- a/src/app/create-task/actions/contact-center/contact-center.component.html
+++ b/src/app/create-task/actions/contact-center/contact-center.component.html
@@ -85,7 +85,7 @@
           </tmt-task-detail>
         </p-tabPanel>
         <p-tabPanel header="Document">
-          <tmt-document></tmt-document>
+          <tmt-document [DocumentDetailData]="contactCenterData?.documentDetails"></tmt-document>
         </p-tabPanel>
       </p-tabView>
     </p-card>
