Account Search - changed search criteria header to show account type

--- a/src/app/create-task/account/account-search/account-search.component.html
+++ b/src/app/create-task/account/account-search/account-search.component.html
@@ -11,7 +11,7 @@
         </p>
     </div>
     <div class="panel">
-        <p-panel header="Search Criteria">
+        <p-panel header="Search Criteria - Account Type {{accountType}}">
             <form action="#" (ngSubmit)="search(searchForm.value); searchForm.reset();" #searchForm="ngForm">
                 <div class="row">
                     <div class="col-sm-5">
