--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -13,6 +13,7 @@ $panel-3-col:#61221d;
 $blue-col:#007bff;
 $gray-1:lightgray;
 $orange-col: #ff9100;
+$invalid-input-border: #a80000;
 
 //font-weight
 $font-normal:normal;
