--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.scss
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.scss
@@ -1,4 +1,5 @@
 @import "./../../../../../assets/scss/variables.scss";
+
 .task-detail-label {
     width: 150px;
     float: left;
@@ -29,4 +30,8 @@
 .required-indicator {
     padding-left: 2px;
     color: $orange-col;
+}
+
+input[type=text].ng-invalid.ng-touched {
+    border: 1px solid $invalid-input-border;
 }
