Refactoring component selectors from tmt to srca

--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -45,7 +45,7 @@
             <!-- tab view -->
             <p-tabView>
                 <p-tabPanel header="Details">
-                    <tmt-account-details [accountDetails]="accountDetails"></tmt-account-details>
+                    <srca-account-details [accountDetails]="accountDetails"></srca-account-details>
                 </p-tabPanel>
                 <p-tabPanel header="Tasks">
                     <ng-template pTemplate="content">
