--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 <div *ngIf="currentUser">
-<tmt-menu-bar></tmt-menu-bar>
+<srca-menu-bar></srca-menu-bar>
 </div>
 <!-- <router-outlet></router-outlet> -->
 <!-- Footer component will be here-->
