--- a/src/app/home/task/task.component.html
+++ b/src/app/home/task/task.component.html
@@ -19,7 +19,7 @@
       <span class="fa fa-download" (click)="exportToExcel()"><span class="pdf-excel-icon">Excel</span></span>
     </div>
     <div style="padding-top: 12px;">
-      <tmt-my-task-list #myTaskList></tmt-my-task-list>
+      <srca-my-task-list #myTaskList></srca-my-task-list>
     </div>
   </div>
 </div>
