--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="container-div">
-  <tmt-dashboard></tmt-dashboard>
-  <tmt-task></tmt-task>
+  <srca-dashboard></srca-dashboard>
+  <srca-task></srca-task>
 </div>
