account type dropdown navigation

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
         <span class="fa fa-question-circle question-icon"></span>
     </div>
     <div class="content-panel">
-        <div class="task-header">Tasks Management</div>
+        <div class="task-header">Service Request Center</div>
     </div>
 </div>
 <div *ngIf="currentUser">
