--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,5 +6,6 @@
 @import "assets/scss/variables.scss";
 @import "assets/scss/pie-chart.scss";
 @import "assets/scss/button.scss";
+@import "assets/scss/table.scss"
 
 
