contact-center: form validation custom error msg

--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.scss
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.scss
@@ -32,6 +32,6 @@
     color: $orange-col;
 }
 
-input[type=text].ng-invalid.ng-touched {
+input[type=text].ui-inputtext.invalid-input {
     border: 1px solid $invalid-input-border;
 }
