--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
@@ -3,11 +3,14 @@
     <div class="row col-md-12 task-details-b-pad">
       <div class="col-md-4">
         <label class="task-detail-label">Caller Name<span class="required-indicator">*</span></label>
-        <input formControlName="callerName" type="text" pInputText />
+        <input formControlName="callerName" type="text" pInputText
+          [ngClass]="{ 'invalid-input': callerName.errors && callerName.touched }" />
       </div>
       <div class=" col-md-4">
         <label class="task-detail-label">Caller Phone<span class="required-indicator">*</span></label>
-        <p-inputMask formControlName="callerPhone" mask="(999) 999-9999"></p-inputMask>
+        <p-inputMask formControlName="callerPhone" mask="(999) 999-9999"
+          [ngClass]="{ 'invalid-mask': callerPhone.errors && callerPhone.touched }">
+        </p-inputMask>
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
@@ -40,15 +43,16 @@
     <div class="row col-md-12 task-details-b-pad">
       <div class="col-md-4">
         <label class="task-detail-label">Taxpayer ID<span class="required-indicator">*</span></label>
-        <p-radioButton name="taxID" value="yes" formControlName="taxPayerID" label="Yes" inputId="tax1"
-          [ngClass]="{ 'invalid-radio': taxPayerID.errors && taxPayerID.touched }">
+        <p-radioButton name="taxID" value="yes" formControlName="taxPayerIDAvailable" label="Yes" inputId="tax1"
+          [ngClass]="{ 'invalid-radio': taxPayerIDAvailable.errors && taxPayerIDAvailable.touched }">
         </p-radioButton>
-        <p-radioButton name="taxID" value="no" formControlName="taxPayerID" label="No" inputId="tax2"
-          [ngClass]="{ 'invalid-radio': taxPayerID.errors && taxPayerID.touched }"></p-radioButton>
+        <p-radioButton name="taxID" value="no" formControlName="taxPayerIDAvailable" label="No" inputId="tax2"
+          [ngClass]="{ 'invalid-radio': taxPayerIDAvailable.errors && taxPayerIDAvailable.touched }">
+        </p-radioButton>
       </div>
-      <div class="col-md-4" *ngIf="taxPayerID.value === 'yes'">
-        <label class="task-detail-label">Taxpayer ID</label>
-        <input type="text" formControlName="taxPayerIDValue" pInputText />
+      <div class="col-md-4" *ngIf="taxPayerIDAvailable.value === 'yes'">
+        <label class="task-detail-label">Taxpayer ID<span class="required-indicator">*</span></label>
+        <input type="text" formControlName="taxPayerID" pInputText />
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
@@ -69,7 +73,7 @@
       </div>
       <div class="editor-pad col-md-7">
         <p-editor formControlName="callDetails" [style]="{'height':'200px'}"
-          [ngClass]="{ 'invalid-editor': callDetails.errors && (callDetails.touched || isFormSubmitted) }">
+          [ngClass]="{ 'invalid-editor': callDetails.errors && callDetails.touched }">
         </p-editor>
       </div>
     </div>
@@ -96,8 +100,10 @@
       </p-table>
     </div>
 
-    <div [ngClass]="message.cssClass" *ngIf="isFormSubmitted">
-      {{message.text}}
+    <div *ngIf="isSaveBtnClicked">
+      <div [ngClass]="message.cssClass" *ngIf="!taskDetailForm.valid || !taskDetailForm.touched">
+        {{message.text}}
+      </div>
     </div>
 
     <div class="button-style">
