--- a/src/assets/scss/panel.scss
+++ b/src/assets/scss/panel.scss
@@ -94,3 +94,11 @@
         }
     }
 }
+
+.panel-aacount-search p-panel{
+    .ui-panel{
+        .ui-panel-content{
+            height: 77px;
+        }
+    }
+}
