--- a/src/app/create-task/account/account-summary/account-details/account-details.component.html
+++ b/src/app/create-task/account/account-summary/account-details/account-details.component.html
@@ -6,13 +6,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Account Number</div>
+                    <div class="col-sm-5 font-bold">Account Number</div>
                     <div class="col-sm-7">{{accountDetails.accountNumber}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Account Short Name</div>
+                    <div class="col-sm-5 font-bold">Account Short Name</div>
                     <div class="col-sm-7">{{accountDetails.accountName}}</div>
                 </div>
             </div>
@@ -20,13 +20,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Main Acct Number</div>
+                    <div class="col-sm-5 font-bold">Main Acct Number</div>
                     <div class="col-sm-7">{{accountDetails.mainAccountNumber}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Market Value</div>
+                    <div class="col-sm-5 font-bold">Market Value</div>
                     <div class="col-sm-7">{{accountDetails.marketValue}}</div>
                 </div>
             </div>
@@ -34,13 +34,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Branch Name</div>
+                    <div class="col-sm-5 font-bold">Branch Name</div>
                     <div class="col-sm-7">{{accountDetails.branchName}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Branch Code</div>
+                    <div class="col-sm-5 font-bold">Branch Code</div>
                     <div class="col-sm-7">{{accountDetails.branchCode}}</div>
                 </div>
             </div>
@@ -48,13 +48,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Rev Tracking Description</div>
+                    <div class="col-sm-5 font-bold">Rev Tracking Description</div>
                     <div class="col-sm-7">{{accountDetails.revTrackingDescription}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Rev Tracking Code</div>
+                    <div class="col-sm-5 font-bold">Rev Tracking Code</div>
                     <div class="col-sm-7">{{accountDetails.revTrackingCode}}</div>
                 </div>
             </div>
@@ -62,13 +62,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Administrator</div>
+                    <div class="col-sm-5 font-bold">Administrator</div>
                     <div class="col-sm-7">{{accountDetails.administrator?.toUpperCase()}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Admin Code</div>
+                    <div class="col-sm-5 font-bold">Admin Code</div>
                     <div class="col-sm-7">{{accountDetails.administratorCode}}</div>
                 </div>
             </div>
@@ -76,13 +76,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Senior Administrator</div>
+                    <div class="col-sm-5 font-bold">Senior Administrator</div>
                     <div class="col-sm-7">{{accountDetails.seniorAdministrator?.toUpperCase()}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Senior Admin Code</div>
+                    <div class="col-sm-5 font-bold">Senior Admin Code</div>
                     <div class="col-sm-7">{{accountDetails.seniorAdministratorCode}}</div>
                 </div>
             </div>
@@ -90,13 +90,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Backup Administrator</div>
+                    <div class="col-sm-5 font-bold">Backup Administrator</div>
                     <div class="col-sm-7">{{accountDetails.backupAdministrator?.toUpperCase()}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Backup Administrator</div>
+                    <div class="col-sm-5 font-bold">Backup Administrator</div>
                     <div class="col-sm-7">{{accountDetails.backupAdministratorCode}}</div>
                 </div>
             </div>
@@ -104,13 +104,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Investment Mgr</div>
+                    <div class="col-sm-5 font-bold">Investment Mgr</div>
                     <div class="col-sm-7">{{accountDetails.investmentManager?.toUpperCase()}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Investment Mgr Code</div>
+                    <div class="col-sm-5 font-bold">Investment Mgr Code</div>
                     <div class="col-sm-7">{{accountDetails.investmentManagerCode}}</div>
                 </div>
             </div>
@@ -118,14 +118,14 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Backup Investment Mgr</div>
+                    <div class="col-sm-5 font-bold">Backup Investment Mgr</div>
                     <div class="col-sm-7">{{accountDetails.backupInvestmentManager?.toUpperCase()}}
                     </div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Backup Investment Mgr Code</div>
+                    <div class="col-sm-5 font-bold">Backup Investment Mgr Code</div>
                     <div class="col-sm-7">{{accountDetails.backupInvestmentManagerCode}}</div>
                 </div>
             </div>
@@ -133,13 +133,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Bank Capacity</div>
+                    <div class="col-sm-5 font-bold">Bank Capacity</div>
                     <div class="col-sm-7">{{accountDetails.bankCapacity?.toUpperCase()}}</div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-5">Control Group</div>
+                    <div class="col-sm-5 font-bold">Control Group</div>
                     <div class="col-sm-7">{{accountDetails.controlGroup?.toUpperCase()}}</div>
                 </div>
             </div>
