--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -86,3 +86,16 @@ p-editor.invalid-editor .ui-editor-container {
 p-dropdown.invalid-dropdown .ui-dropdown {
     border: 1px solid $invalid-input-border;
 }
+
+.error-class{
+    color: red;
+    padding-top: 10px;
+}
+
+label{
+    font-weight: bold;
+}
+
+.font-bold{
+    font-weight: bold;
+}
